--- a/style.css
+++ b/style.css
@@ -20,6 +20,25 @@ h1 {
 canvas {
     background-color: black;
     display: block;
+    margin: 0 auto;
+}
+
+#gameOverScreen {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Stellt sicher, dass das Overlay über anderen Elementen liegt */
+    display: none; /* Standardmäßig ausgeblendet */
+}
+#gameOverScreen img {
+    max-width: 100%;
+    height: auto;
 }
 
 p {
